更改文件名

--- a/src/00.Windows10开发环境搭建/00.WSL安装与使用.md
+++ b/src/00.Windows10开发环境搭建/00.WSL安装与使用.md
@@ -3,19 +3,9 @@ title: 00.WSL安装与使用
 # toc: false
 ---
 
-## 基础环境准备
-
-基础环境要求主要有以下几点：
-
-windows 操作系统版本要达到要求
-开启 wsl2
-安装实用工具 Windows Terminal 和 Visual Studio Code
-安装 Ubuntu 子系统
-安装 git
-
 ## windows 操作系统版本
 
-执行 winver 命令查看 Windows 版本，你的 Windows 版本不能低于 20H2 版本。
+执行 ``winver`` 命令查看 Windows 版本，你的 Windows 版本不能低于 20H2 版本。
 
 ![1](http://cdn.bestuid.com/img/202210170306908.png)
 
@@ -33,7 +23,7 @@ windows 操作系统版本要达到要求
 
 :::info 特别提醒
 
-注意： 如无必要，不要开启「Hyper-v」，Hyper-v 的保留端口经常会导致 Docker 容器启动失败，很多时候启动容器时提示端口被占用，但是运行`netstat -ano | findstr xxx` 又找不到占用端口的进程，这种情况就是 Hyper-v 导致的。
+注意： 如无必要，不要开启「Hyper-v」，Hyper-v 的保留端口经常会导致 Docker 容器启动失败，很多时候启动容器时提示端口被占用，但是运行 `netstat -ano | findstr xxx` 又找不到占用端口的进程，这种情况就是 Hyper-v 导致的。
 
 :::
 
@@ -41,7 +31,11 @@ windows 操作系统版本要达到要求
 
 Windows 应用商店搜索安装 Windows terminal。
 
-安装 Visual Studio Code，安装 VS Code 时，如果提示是否将 VS Code 加入系统环境变量，选择 「是」。
+![20221018223048](http://cdn.bestuid.com/img/20221018223048.png)
+
+下载安装 [Visual Studio Code](https://code.visualstudio.com/Download)，安装 VS Code 时，如果提示是否将 VS Code 加入系统环境变量，选择 「是」。
+
+![20221018223358](http://cdn.bestuid.com/img/20221018223358.png)
 
 ## 安装 Ubuntu 子系统
 
@@ -77,7 +71,7 @@ NoLsp.exe C:\windows\system32\wsl.exe
 运行以下命令，查看相关应用运行的 wsl 版本：
 
 ```bash
- > wsl --list --verbose
+> wsl --list --verbose
 ```
 
 运行结果如下：
@@ -133,7 +127,7 @@ git config --global user.name "Your Name"
 git config --global user.email "youremail@domain.com"
 ```
 
-使用以下命令设置 Git 命令 push 的默认模式为  simple  ，当我们执行  git push  没有指定分支时，自动使用当前分支，而不是报错。
+使用以下命令设置 Git 命令 push 的默认模式为  simple  ，当我们执行  git push  没有指定分支时，自动使用当前分支，而不是报错。
 
 ```Bash
 git config --global push.default simple
