完成01.zsh的安装与使用

--- a/src/00.Windows10开发环境搭建/01.zsh的安装与使用.md
+++ b/src/00.Windows10开发环境搭建/01.zsh的安装与使用.md
@@ -3,3 +3,98 @@ title: 01.zsh的安装与使用
 ---
 
 ## 简介
+
+为了提高shell命令的输入效率，我推荐使用可配置和拓展性更高的zsh。
+
+## 安装zsh
+
+在WSL中原有的bash终端中输入以下命令完成zsh的安装：
+
+```Bash
+sudo apt install 
+```
+## 安装oh-my-zsh
+
+zsh安装完成后需要通过一系列的配置后才能使用，为了避免复杂的配置过程，我们安装 oh-my-zsh 帮我们完成这些配置。
+
+### 项目地址
+
+[oh-my-zsh项目github](https://github.com/ohmyzsh/ohmyzsh)
+
+### 前提条件
+![20221019225231](http://cdn.bestuid.com/img/20221019225231.png)
+
+:::tip 提示
+WSL中已经帮我们预装了curl、wget以及git,这里我们什么都不用管,直接执行下面的安装命令就行了
+:::
+
+### 安装命令
+
+| Method    | Command                                                                                           |
+| :-------- | :------------------------------------------------------------------------------------------------ |
+| **curl**  | `sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"` |
+| **wget**  | `sh -c "$(wget -O- https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"`   |
+| **fetch** | `sh -c "$(fetch -o - https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"` |
+
+:::waring 警告
+由于某些神秘原因，安装过程中可能会出错以下443错误。
+![20221019230404](http://cdn.bestuid.com/img/20221019230404.png)
+别慌！问题不大，我有良药！
+**方法一：**
+直接在github中找到install.sh这个安装脚本，全选-复制
+在WSL中，执行以下命令
+
+```
+vim install.sh
+```
+鼠标右键单击终端界面，可能会提示文件过大，没关系确认就好。然后保存文件就好。
+在英文输入法下按冒号（:），然后输入wq,按回车确认就好，如下图：
+![20221019231448](http://cdn.bestuid.com/img/20221019231448.png)
+然后执行以下命令即可完成安装：
+```
+sh -c install.sh
+```
+**方法二：**
+> 我淋过雨，所以我想为别人撑一把伞。
+
+同样被坑过的前辈为我们撑起了一把伞，在gitee上复制了该项目的国内镜像。直接运行下面的命令完成安装，爽歪歪！
+```
+sh -c "$(wget -O- https://gitee.com/shmhlsy/oh-my-zsh-install.sh/raw/master/install.sh)"
+```
+:::
+
+==重点:== 完成安装后，在WSL原有的bash中，执行`zsh`命令进入zsh。
+
+## 配置oh-my-zsh
+根据项目文档，我们可以完成**主题**、**插件**的配置，还可以查看官方提供的主题截图和插件说明，这里我就不多赘述了，按需配置就行了。
+
+![20221019233828](http://cdn.bestuid.com/img/20221019233828.png)
+![20221019233913](http://cdn.bestuid.com/img/20221019233913.png)
+
+我主要是推荐一款我喜欢的插件**zsh-autosuggestions**，这是一个命令补全插件，极大的减少了我们的重复劳动，提高了工作效率，又可以多点时间划水了。
+### 项目地址：
+[https://github.com/zsh-users/zsh-autosuggestions](https://github.com/zsh-users/zsh-autosuggestions)
+### 安装过程
+1. 通过Git把该项目克隆到 ~/.oh-my-zsh/custom/plugins 文件夹下。命令如下：
+```
+git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
+```
+
+2. 修改 ~/.zshrc 文件，加入插件:
+```
+ vim ~/.zshrc
+```
+```
+plugins=( 
+    # other plugins...
+    zsh-autosuggestions
+)
+```
+3. 重启终端。
+
+## 最终效果
+输入g,自动提示以前输入过的命令，按键盘右键，补全命令，按上下键切换命令。
+![20221019235836](http://cdn.bestuid.com/img/20221019235836.png)
+忘记命令相关参数时，按Tab键自动提示相关命令参数说明，按Tab键可切换选中。
+如下图，输入git然后按Tab,会提示git命令相关的参数。
+![20221020000431](http://cdn.bestuid.com/img/20221020000431.png)
